--- a/bookingsite/package.json
+++ b/bookingsite/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.7.2",
+    "axios": "^1.7.3",
+    "combined-stream": "^1.0.8",
+    "form-data": "^4.0.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
