--- a/bookingsite/package.json
+++ b/bookingsite/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@iconify-icons/mdi": "^1.2.48",
     "@iconify/react": "^5.0.2",
+    "@next/font": "^14.2.11",
     "axios": "^1.7.3",
     "combined-stream": "^1.0.8",
     "form-data": "^4.0.0",
