--- a/bookingsite/package.json
+++ b/bookingsite/package.json
@@ -15,6 +15,7 @@
     "@next/font": "^14.2.11",
     "axios": "^1.7.3",
     "combined-stream": "^1.0.8",
+    "firebase": "^10.13.1",
     "form-data": "^4.0.0",
     "next": "14.2.5",
     "react": "^18",
