--- a/bookingsite/firebase.json
+++ b/bookingsite/firebase.json
@@ -1,14 +1,21 @@
 {
   "hosting": {
-    "site" : "oriantel-spa",
-    "source": ".",
+    "site": "oriantel-spa",
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
-    "frameworksBackend": {
-      "region": "europe-west1"
-    }
+    "rewrites": [
+      {
+        "destination": "/details/[id].html",
+        "regex": "^/details/([^/]+?)(?:/)?$"
+      },
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
