--- a/bookingsite/package.json
+++ b/bookingsite/package.json
@@ -16,6 +16,7 @@
     "combined-stream": "^1.0.8",
     "form-data": "^4.0.0",
     "next": "14.2.5",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
